Ticket: #ENT-634 SubTicket: # Component: Changes: 1.Fixed Bug - Layout name truncates even the name is not long in TF&VF (except Chrome).

--- a/TripfinderWeb/TripfinderWeb/Global/Css/detail-view.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/detail-view.less
@@ -1231,7 +1231,7 @@
 				float: left;
 				height: 24px;
 				line-height: 24px;
-				width: calc(~"100% - 125px");
+				width: calc(~"100% - 124px");
 
 				.icon.bottom-caret {
 					margin: 10px 0 10px 8px;
